--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "skipDefaultLibCheck": true,
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
+    "noEmit": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
